# packages/contracts/openapi/openapi.v1.json
@@ -2362,6 +2362,10 @@
             "type": "string",
             "nullable": true
           },
+          "reason": {
+            "type": "string",
+            "nullable": true
+          },
           "createdAt": {
             "type": "string"
           },
